--- a/spot2.html
+++ b/spot2.html
@@ -9,51 +9,67 @@
 
 <style>
   :root{
-    --paper:#f5f1e8; --ink:#2f2a1e; --muted:#6b6253; --accent:#a08a63;
+    --paper:#0e0f0e;      /* fondo oscuro tipo papel */
+    --ink:#dbd6c9;        /* texto principal */
+    --muted:#9b9689;      /* texto secundario */
+    --accent:#242523;     /* línea sutil */
     --maxw:46rem; --lh:1.6; --fs:18px;
   }
+
   html{ font-size:var(--fs); }
   body{
     margin:0; background:var(--paper); color:var(--ink);
     font-family: ui-serif, Georgia, "Iowan Old Style","Palatino Linotype", Palatino, serif;
-    line-height:var(--lh); -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+    line-height:var(--lh);
+    -webkit-font-smoothing:antialiased;
+    text-rendering:optimizeLegibility;
     min-height:100svh; display:grid; place-items:center; overflow:hidden;
   }
-  /* Grano/ruido sutil tipo papel */
+
+  /* textura tenue tipo papel oscuro */
   body::before{
     content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
     background-image:
-      radial-gradient(circle at 25% 15%, #000 .5px, transparent .5px),
-      radial-gradient(circle at 75% 85%, #000 .5px, transparent .5px);
-    background-size:3px 3px, 3px 3px; mix-blend-mode:multiply;
+      radial-gradient(circle at 25% 15%, #fff .5px, transparent .5px),
+      radial-gradient(circle at 75% 85%, #fff .5px, transparent .5px);
+    background-size:3px 3px, 3px 3px;
+    mix-blend-mode:screen;
   }
 
   main{
-    width:100%; max-width:var(--maxw); padding:10vh 1.25rem;
-    display:grid; place-items:center; text-align:center;
+    width:100%; max-width:var(--maxw);
+    padding:10vh 1.25rem;
+    display:grid; place-items:center;
+    text-align:center;
   }
 
   h1{
-    margin:0; font-weight:600; letter-spacing:.2px;
-    font-size:clamp(2.2rem, 7vw, 4rem); line-height:1.04;
-    /* leve “letterpress” para sensación de tinta en papel */
-    text-shadow: 0 .5px 0 color-mix(in oklab, var(--ink) 12%, transparent);
+    margin:0;
+    font-weight:600;
+    letter-spacing:.2px;
+    font-size:clamp(2.2rem, 7vw, 4rem);
+    line-height:1.04;
+    /* leve efecto tinta impresa */
+    text-shadow: 0 .5px 0 color-mix(in oklab, var(--ink) 15%, transparent);
   }
 
   .rule{
-    width:min(340px, 60%); height:1px; margin:.85rem auto 1.25rem;
-    background: color-mix(in oklab, var(--accent) 38%, transparent);
-    opacity:.6;
+    width:min(340px, 60%);
+    height:1px;
+    margin:.85rem auto 1.25rem;
+    background: color-mix(in oklab, var(--ink) 28%, transparent);
+    opacity:.4;
   }
 
   p.desc{
-    margin:0; color:var(--muted); font-style:italic;
+    margin:0;
+    color:var(--muted);
+    font-style:italic;
     font-size:clamp(1rem, 2.6vw, 1.15rem);
   }
 
-  /* Motion safety (por si en el futuro se añade algo animado) */
   @media (prefers-reduced-motion: reduce){
-    * { animation: none !important; transition: none !important; }
+    * { animation:none !important; transition:none !important; }
   }
 </style>
 </head>
