--- a/index.html
+++ b/index.html
@@ -297,6 +297,21 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   </a>
 </li>
 
+<!-- BOUNCE GARDEN -->
+<li>
+  <a class="item" href="the-bounce-garden.html">
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5">
+      <!-- Círculo principal -->
+      <circle cx="12" cy="12" r="9" />
+      <!-- Nodos internos -->
+      <circle cx="8" cy="10" r="1.2" />
+      <circle cx="16" cy="14" r="1.2" />
+    </svg>
+    <span class="title">The Bounce Garden</span>
+    <span class="meta">Where collisions sing — melodic orbits and rhythmic echoes within a circle.</span>
+  </a>
+</li>
+
       </ul>
     </nav>
 
